--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,9 +13,18 @@
 <body id="body_global"> 
 
     {{{body}}}
-    
-</body>
 
+    <style>
+       
+    </style>
+    <div class="modal-aviso" id="modal-conteiner">
+        <div class="modal">
+            <button class="fechar">X</button>
+            <h3>Aviso</h3>
+        </div>
+    </div>
+
+</body>
     <script src="/js/script.js"></script>
 </body>
 </html>
