--- a/views/cadtela.handlebars
+++ b/views/cadtela.handlebars
@@ -74,7 +74,7 @@
                         <td>{{valor}}</td>
                         <td ><input type="hidden"  value="{{status}}" id="status">{{status}}</td>
                         <td>
-                            <a href="#"><img src="/img/edit.svg" alt="Editar"></a>
+                            <a href="/alterarconta-tela/{{id_conta}}"><img src="/img/edit.svg" alt="Editar"></a>
                             <a href="/deletar/{{id_conta}}"><img src="/img/trash.svg" alt="Excluir"></a>
 
                         </td>          
